--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-jwt.secret=secretkey
+jwt.secret=jwtsecretkey
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/shoppingmall
 spring.datasource.username=postgres
 spring.datasource.password=pass1234
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
